Moved to 1.19 and Java 16